Fixed image bottom spacing issue in phone

--- a/css/style.css
+++ b/css/style.css
@@ -270,10 +270,13 @@ html[data-bs-theme="light"] .white-bg {
         text-align: center;
         margin-bottom: 10px;
     }
+    .about-me h2 {
+        font-size: 24px;
+    }
     .ways-i-can-help .action-card {
         margin-bottom: 15px;
     }
-    .project-bottom-spacing {
+    .project-bottom-spacing img {
         margin-bottom: 15px;
     }
     .selected-work h4 {
